tests/neg-custom-args/captures/i24309-region-orig.check
-- Error: tests/neg-custom-args/captures/i24309-region-orig.scala:20:26 ------------------------------------------------
20 |      val c: Ref^{r1.R} = b     // error, limitation
   |                          ^
   |                          Local reach capability r2.R leaks into capture scope of an enclosing function.
   |                          You could try to abstract the capabilities referred to by r2.R in a capset variable.
-- Error: tests/neg-custom-args/captures/i24309-region-orig.scala:21:6 -------------------------------------------------
21 |      a                         // error, limitation
   |      ^
   |      Local reach capability r1.R leaks into capture scope of an enclosing function.
   |      You could try to abstract the capabilities referred to by r1.R in a capset variable.
